# jotin

./: README.md  biome.json  package.json
.github/workflows/: release.yml
openspec/: project.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ui/: sonner.tsx
