[package]
name = "jotin"
version = "0.1.0"
description = "Fast, local-first note capture from your macOS menu bar"
authors = ["chainyo"]
edition = "2021"

[lib]
name = "jotin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["serde", "v4"] }
